# sdl2-libvlc

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindLIBVLC.cmake  FindSDL2.cmake
